Se agregan estilos del header

--- a/src/style.css
+++ b/src/style.css
@@ -27,3 +27,12 @@ ul {
 h1 {
     text-align: center;
 }
+
+.header-1 {
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 10px;
+    padding-right: 10px;
+}
