--- a/src/style.css
+++ b/src/style.css
@@ -36,3 +36,9 @@ h1 {
     padding-left: 10px;
     padding-right: 10px;
 }
+
+.icons img {
+    width: 28px;
+    height: 28px;
+    color: white;
+}
