--- a/src/style.css
+++ b/src/style.css
@@ -42,3 +42,13 @@ h1 {
     height: 28px;
     color: white;
 }
+
+.btns {
+    height: 100%;
+    padding: 0;
+    margin-top: 5px;
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    overflow: hidden;
+}
