--- a/src/style.css
+++ b/src/style.css
@@ -68,3 +68,17 @@ h1 {
     justify-content: center;
     flex-wrap: wrap;
 }
+
+.cards {
+    width: 80%;
+    height: 110px;
+    margin: 1em 1em;
+    margin-left: 4.5%;
+    font-size: 90%;
+    color: black;
+    padding-top: 19px;
+    padding-left: 19px;
+    padding-right: 19px;
+    border: none;
+    background-color: rgb(241, 241, 241);
+}
