--- a/src/style.css
+++ b/src/style.css
@@ -82,3 +82,11 @@ h1 {
     border: none;
     background-color: rgb(241, 241, 241);
 }
+
+.cards img {
+    width: 36px;
+    height: 36px;
+    padding: 0;
+    border-radius: 50%;
+    margin-right: 20px;
+}
