--- a/src/style.css
+++ b/src/style.css
@@ -90,3 +90,8 @@ h1 {
     border-radius: 50%;
     margin-right: 20px;
 }
+
+.card {
+    display: inline-flex;
+    justify-content: space-between;
+}
