--- a/public/style.css
+++ b/public/style.css
@@ -26,6 +26,7 @@ ul {
 
 h1 {
     text-align: center;
+    padding-top: 10px;
 }
 
 .header-1 {
@@ -80,9 +81,13 @@ h1 {
 }
 
 #subtitle p {
-    margin: 100px;
+    margin-top: 200px;
     text-align: center;
     color: rgb(7, 105, 134);
+    font-size: 3em;
+    font-weight: bolder;
+    color: rgb(7, 105, 134);
+    text-align: center;
 }
 
 #datacontainer {
@@ -90,6 +95,7 @@ h1 {
     justify-content: center;
     align-content: center;
     flex-wrap: wrap;
+    margin-top: 5px;
 }
 
 .cards {
@@ -141,10 +147,7 @@ h1 {
         border-radius: 2px;
         display: inline-flex;
         justify-content: space-between;
-        color: black;
         padding-top: 19px;
-        border: none;
-        background-color: rgb(241, 241, 241);
         margin: 1% 1%;
         padding: 1%;
         padding-bottom: 5px;
@@ -178,10 +181,7 @@ h1 {
         border-radius: 2px;
         display: inline-flex;
         justify-content: space-between;
-        color: black;
         padding-top: 19px;
-        border: none;
-        background-color: rgb(241, 241, 241);
         margin: 1% 1%;
         padding: 1%;
         padding-bottom: 7px;
@@ -211,15 +211,11 @@ h1 {
     }
     .cards {
         width: 20%;
-        /* height: 100%; */
         font-size: 80%;
         border-radius: 2px;
         display: inline-flex;
         justify-content: space-between;
-        color: black;
         padding-top: 19px;
-        border: none;
-        background-color: rgb(241, 241, 241);
         margin: 1% 1%;
         padding: 1%;
         padding-bottom: 10px;
